# bit

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  lint-type.yml  publish.yml  python-package.yml  release-validation.yml
prompt_engineering/: original_prompt.md  refined_prompt.md
src/bit/: __init__.py  cli.py  config.py  ollama.py  shell.py  terminal.py
src/bit/shell/: bash_deactivation.sh  bash_integration.sh  zsh_deactivation.sh  zsh_integration.sh
src/bit_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_config.py  test_console_integration.py  test_ollama.py  test_shell.py
