[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bit-cli"
version = "0.1.0"
description = "Translate natural-language shell instructions into Linux commands using a local OLLAMA model."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "gwren" }
]
keywords = ["cli", "shell", "ollama", "linux", "translator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[project.scripts]
bit = "bit.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bit = ["shell/bash_integration.sh", "shell/zsh_integration.sh"]