[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bit-wrangler"
version = "0.1.0"
description = "Translate natural-language shell instructions into Linux commands using a local OLLAMA model."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "gwren" }
]
keywords = ["cli", "shell", "ollama", "linux", "translator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[project.scripts]
bit = "bit.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.3"]
dev = ["black", "ruff", "flake8", "mypy"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bit = ["shell/bash_integration.sh", "shell/bash_deactivation.sh", "shell/zsh_integration.sh", "shell/zsh_deactivation.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
extend-exclude = '''
/(venv)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
exclude = "(?:^|/)(venv)/"
warn_unused_configs = true
show_error_codes = true
pretty = true